# franz-rs

./: .gitignore  Cargo.toml  README.md
src/: connection.rs  error.rs  kafka_client.rs  lib.rs
src/admin/: mod.rs
tests/: admin_client_tests.rs  kafka_client_tests.rs
tests/admin/: admin_client_tests.rs
